<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="button_search" translatable="false">Поиск</string>
    <string name="button_media" translatable="false">Медиатека</string>
    <string name="button_settings" translatable="false">Настройки</string>
    <string name="settings_arrow" translatable="false">Настройки</string>
    <string name="dark_mode" translatable="false">Темная тема</string>
    <string name="share" translatable="false">Поделиться приложением</string>
    <string name="support" translatable="false">Написать в поддержку</string>
    <string name="acception" translatable="false">Пользовательское соглашение</string>
</resources>