<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="2dp">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_arrow"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="186dp"
        android:textColor="#1A1B22" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/arrow"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="9dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/icon_arrow"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/dark_mode"
            android:textSize="19sp"
            android:layout_marginTop="71dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/black"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/switcher"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="63dp"
            android:layout_marginRight="6dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/icon_switch_lm"
            app:iconGravity="textStart"
            app:iconTint="#AEAFB4" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="21dp"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="14dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/icon_share_lm"
            app:iconGravity="textStart"
            app:iconTint="#AEAFB4" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/support"
            android:textSize="19sp"
            android:layout_marginTop="21dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/black"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/support"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="14dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/icon_support_lm"
            app:iconTint="#AEAFB4" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/acception"
            android:textSize="19sp"
            android:layout_marginTop="21dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/black"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/acception"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="14dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/icon_acception_lm"
            app:iconTint="#AEAFB4" />
    </FrameLayout>

    </LinearLayout>
